[tool.poetry]
name = "advent"
version = "0.1.0"
description = ""
authors = ["Jeremy Low <jeremylow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
more-itertools = "^8.12.0"
ipdb = "^0.13.9"

[tool.poetry.dev-dependencies]
ipython = "^7.30.0"
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
